update data model